// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`printErrors should print objects with a message key 1`] = `
Array [
  Array [
    "[31marbitraryValue[39m",
  ],
]
`;

exports[`printGraphQLErrors should print multiple GraphQLErrors 1`] = `
Array [
  Array [
    "[31mOops! The Lagoobernetes API returned errors:[39m",
  ],
  Array [
    "[31mA GraphQLError message[39m",
  ],
  Array [
    "[31mAnother GraphQLError message[39m",
  ],
]
`;

exports[`printGraphQLErrors should print singular GraphQLErrors 1`] = `
Array [
  Array [
    "[31mOops! The Lagoobernetes API returned an error:[39m",
  ],
  Array [
    "[31mA GraphQLError message[39m",
  ],
]
`;

exports[`printGraphQLErrors should tell the user to log in if there is a bearer token error 1`] = `
Array [
  Array [
    "[31mNo authentication token found. Please log in first with \\"lagoobernetes login\\".[39m
[31mOnline documentation: https://github.com/amazeeio/lagoobernetes/blob/master/cli/README.md#lagoobernetes-login[39m",
  ],
]
`;

exports[`printNoConfigError should print an error about the configuration file not being found 1`] = `
Array [
  Array [
    "[31m.lagoobernetes.yml config file not found. Please create one with \\"lagoobernetes init\\".[39m
[31mOnline documentation: https://github.com/amazeeio/lagoobernetes/blob/master/cli/README.md#lagoobernetes-init[39m",
  ],
]
`;

exports[`printProjectConfigurationError should print an error about missing project configuration 1`] = `
Array [
  Array [
    "[31mNo project configured. Please create a .lagoobernetes.yml config file with \\"lagoobernetes init\\" or pass a project to this command via the --project option.[39m
[31mOnline documentation: https://github.com/amazeeio/lagoobernetes/blob/master/cli/README.md#lagoobernetes-init[39m",
  ],
]
`;
